Refactor service implementations to map entities to DTOs